--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -37,10 +39,12 @@
         <activity android:name=".Activities.SignUpActivity" />
         <activity
             android:name=".EjemploLogIn"
-            android:label="@string/title_activity_ejemplo_log_in" />
+            android:label="@string/title_activity_ejemplo_log_in"
+            android:noHistory="true" />
         <activity
             android:name=".Activities.SignInActivity"
-            android:label="@string/title_activity_sign_in" />
+            android:label="@string/title_activity_sign_in"
+            android:noHistory="true" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -63,6 +67,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Activities.GettingToKnowYou" android:noHistory="true"></activity>
     </application>
 
 </manifest>
