--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,14 @@
             android:noHistory="true" />
         <activity
             android:name=".Activities.SignInActivity"
-            android:label="@string/title_activity_sign_in"
-            android:noHistory="true" />
+            android:label="@string/title_activity_sign_in">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
